--- a/Practice Summer 2024/Laba_1_2/mainwindow.ui
+++ b/Practice Summer 2024/Laba_1_2/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>456</width>
-    <height>576</height>
+    <height>304</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,13 +42,34 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QTextEdit" name="sum_edit"/>
+       <widget class="QTextEdit" name="sum_edit">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>30</height>
+         </size>
+        </property>
+       </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QTextEdit" name="interest_rate_edit"/>
+       <widget class="QTextEdit" name="interest_rate_edit">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>30</height>
+         </size>
+        </property>
+       </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QTextEdit" name="storage_period_edit"/>
+       <widget class="QTextEdit" name="storage_period_edit">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>30</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -118,16 +139,6 @@
      </layout>
     </item>
    </layout>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>456</width>
-     <height>24</height>
-    </rect>
-   </property>
   </widget>
  </widget>
  <resources/>
