--- a/Practice Summer 2024/Laba_4/mainwindow.ui
+++ b/Practice Summer 2024/Laba_4/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>803</width>
-    <height>527</height>
+    <width>716</width>
+    <height>487</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,15 +16,14 @@
   <property name="styleSheet">
    <string notr="true">#centralwidget {
 	border-image: url(&quot;:/images/map.jpg&quot;) 0 0 0 0 stretch stretch;
-}
-</string>
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QRadioButton" name="west">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>180</y>
+      <x>160</x>
+      <y>170</y>
       <width>21</width>
       <height>20</height>
      </rect>
@@ -36,8 +35,8 @@
    <widget class="QRadioButton" name="north">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>200</y>
+      <x>330</x>
+      <y>180</y>
       <width>21</width>
       <height>20</height>
      </rect>
@@ -49,8 +48,8 @@
    <widget class="QRadioButton" name="south">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>260</y>
+      <x>390</x>
+      <y>280</y>
       <width>21</width>
       <height>20</height>
      </rect>
@@ -62,8 +61,8 @@
    <widget class="QRadioButton" name="queen">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>240</y>
+      <x>460</x>
+      <y>220</y>
       <width>21</width>
       <height>20</height>
      </rect>
@@ -72,24 +71,11 @@
      <string/>
     </property>
    </widget>
-   <widget class="QRadioButton" name="new_south">
+   <widget class="QRadioButton" name="newsouth">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>360</y>
-      <width>21</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="capital">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>350</y>
+      <x>450</x>
+      <y>270</y>
       <width>21</width>
       <height>20</height>
      </rect>
@@ -101,7 +87,7 @@
    <widget class="QRadioButton" name="victoria">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>470</x>
       <y>370</y>
       <width>21</width>
       <height>20</height>
@@ -114,8 +100,21 @@
    <widget class="QRadioButton" name="tasmania">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>470</y>
+      <x>470</x>
+      <y>440</y>
+      <width>21</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="capital">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>320</y>
       <width>21</width>
       <height>20</height>
      </rect>
