--- a/Practice Summer 2024/Laba_5_3/mainwindow.ui
+++ b/Practice Summer 2024/Laba_5_3/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>578</width>
-    <height>314</height>
+    <height>190</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,6 +33,12 @@
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>150</height>
+           </size>
           </property>
          </widget>
         </item>
